one more time to fix overflow behavior on navigation panel

--- a/stylesheets/navigation.css
+++ b/stylesheets/navigation.css
@@ -145,6 +145,7 @@
 
 .navigation-panels {
   flex: 1 1 0;
+  overflow-x: hidden;
   overflow-y: auto;
   /* useful for offsetTop math in JS */
   position: relative;
